# ex-tokio-tracing-sqlx-http3

./: Cargo.toml  README.md
migrations/: 20240724082928_init.down.sql  20240724082928_init.up.sql
src/: db.rs  lib.rs  main.rs  phonehandler.rs  types.rs
test-fixtures/: create-contacts.sql  insert-50-contacts.sql  insert-contacts.sql
