[package]
name = "ex-tokio-tracing-sqlx-http3"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
] }
console-subscriber = "0.3.0"
tokio = { version = "1.38", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.4.0"
dotenvy = "0.15.7"
